--- a/index.html
+++ b/index.html
@@ -59,9 +59,13 @@
                 <button id="theme-toggle-btn" class="btn" title="Toggle dark mode">
                     <i data-lucide="moon"></i>
                 </button>
-                <button id="help-btn" class="btn">
-                    <i data-lucide="help-circle"></i>
-                    <span>Help</span>
+                <button id="help-btn" class="btn" title="Keyboard Shortcuts (Ctrl+/)">
+                    <i data-lucide="keyboard"></i>
+                    <span>Shortcuts</span>
+                </button>
+                <button id="tutorials-btn" class="btn" title="View Tutorials">
+                    <i data-lucide="book-open"></i>
+                    <span>Tutorials</span>
                 </button>
             </div>
         </header>
