--- a/editor.html
+++ b/editor.html
@@ -15,6 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/editor.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.45.0/min/vs/editor/editor.main.min.css">
     <script src="https://unpkg.com/lucide@latest"></script>
 </head>
@@ -32,9 +33,6 @@
                 <a href="editor.html" class="nav-link active">Editor</a>
             </div>
             <div class="nav-actions">
-                <button id="theme-toggle-btn" class="btn-icon" title="Toggle dark mode">
-                    <i data-lucide="moon"></i>
-                </button>
             </div>
         </nav>
 
