--- a/index.html
+++ b/index.html
@@ -325,10 +325,6 @@
                                 <span class="stat-number">3</span>
                                 <span class="stat-label">Languages</span>
                             </div>
-                            <div class="stat">
-                                <span class="stat-number">0</span>
-                                <span class="stat-label">Prerequisites</span>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -381,7 +377,7 @@
                                 <span class="difficulty-level">Intermediate</span>
                             </div>
                             <a href="javascript-tutorials.html" class="category-cta-btn">
-                                <span>Start Learning JavaScript</span>
+                                <span>Start Learning JS</span>
                                 <i data-lucide="arrow-right"></i>
                             </a>
                         </div>
