--- a/css-tutorials.html
+++ b/css-tutorials.html
@@ -25,58 +25,8 @@
 </head>
 <body>
     <div id="app">
-        <!-- Navigation -->
-        <nav class="main-nav">
-            <div class="nav-brand">
-                <img src="img/webforge-icon.png" alt="WebForge" class="nav-logo">
-                <h1>WebForge</h1>
-            </div>
-            <div class="nav-links">
-                <a href="index.html" class="nav-link">Home</a>
-                <a href="index.html?page=tutorials" class="nav-link">Tutorials</a>
-                <a href="editor.html" class="nav-link">Editor</a>
-            </div>
-            <div class="nav-actions">
-                <!-- Forge Status -->
-                <div id="forge-status" class="forge-status">
-                    <div class="forge-level-badge">
-                        <i data-lucide="flame"></i>
-                        <span id="forge-level">1</span>
-                    </div>
-                    <div class="forge-info">
-                        <div id="forge-title" class="forge-title">Apprentice Smith</div>
-                        <div class="forge-xp-container">
-                            <div class="forge-xp-bar-bg">
-                                <div id="forge-xp-bar" class="forge-xp-bar" style="width: 0%"></div>
-                            </div>
-                            <span id="forge-xp-text" class="forge-xp-text">0/100 XP</span>
-                        </div>
-                    </div>
-                </div>
-                
-                <button id="mobile-menu-btn" class="btn-icon mobile-menu-btn" title="Menu">
-                    <i data-lucide="menu"></i>
-                </button>
-            </div>
-        </nav>
-
-        <!-- Mobile Navigation Menu -->
-        <div id="mobile-nav" class="mobile-nav hidden">
-            <div class="mobile-nav-content">
-                <a href="index.html" class="mobile-nav-link">
-                    <i data-lucide="home"></i>
-                    <span>Home</span>
-                </a>
-                <a href="index.html?page=tutorials" class="mobile-nav-link">
-                    <i data-lucide="book-open"></i>
-                    <span>Tutorials</span>
-                </a>
-                <a href="editor.html" class="mobile-nav-link">
-                    <i data-lucide="code"></i>
-                    <span>Editor</span>
-                </a>
-            </div>
-        </div>
+        <!-- Navigation Container -->
+        <div id="navbar-container"></div>
 
         <!-- CSS Tutorial Category Page -->
         <div class="page active">
@@ -278,6 +228,7 @@
                         <div class="footer-column">
                             <h4>Learn</h4>
                             <ul>
+                                <li><a href="components.html">Components</a></li>
                                 <li><a href="html-tutorials.html">HTML Tutorials</a></li>
                                 <li><a href="css-tutorials.html">CSS Tutorials</a></li>
                                 <li><a href="javascript-tutorials.html">JavaScript Tutorials</a></li>
@@ -320,6 +271,8 @@
             </div>
         </footer>
 
+        <!-- Load component loader first -->
+        <script src="js/component-loader.js"></script>
         <!-- Load essential scripts -->
         <script src="js/models/types.js"></script>
         <script src="js/services/storage.js"></script>
