--- a/editor.html
+++ b/editor.html
@@ -179,6 +179,9 @@
             <!-- Welcome Screen -->
             <div id="welcome-screen" class="welcome-screen hidden">
                 <div class="welcome-content">
+                    <button class="welcome-close-btn" id="welcome-close-x" aria-label="Close welcome screen">
+                        <i data-lucide="x"></i>
+                    </button>
                     <h2>Welcome to WebForge Editor</h2>
                     <p>Start building your web projects with our professional code editor.</p>
                     <div class="welcome-actions">
