--- a/editor.html
+++ b/editor.html
@@ -249,7 +249,8 @@
                     <span>JavaScript</span>
                 </button>
             </div>
-            
+        </div>
+    </div>
 
     <!-- Additional Editor Modals -->
     <div id="shortcuts-modal" class="modal hidden">
