nav bar tutorial done

--- a/component-navbar.html
+++ b/component-navbar.html
@@ -10,6 +10,12 @@
         <a href="editor.html" id="nav-editor" class="nav-link">Editor</a>
     </div>
     <div class="nav-actions">
+        <!-- CTA Button -->
+        <a href="editor.html" class="nav-cta-btn">
+            <i data-lucide="code"></i>
+            <span>Start Building</span>
+        </a>
+        
         <!-- Forge Status -->
         <div id="forge-status" class="forge-status">
             <div class="forge-level-badge">
@@ -47,6 +53,10 @@
         <a href="editor.html" class="mobile-nav-link">
             <i data-lucide="code"></i>
             <span>Editor</span>
+        </a>
+        <a href="editor.html" class="mobile-nav-link mobile-nav-cta">
+            <i data-lucide="zap"></i>
+            <span>Start Building</span>
         </a>
     </div>
 </div>
