--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             <i data-lucide="hammer"></i>
                             <div class="btn-text-wrapper">
                                 <span class="btn-main-text">Browse Components</span>
-                                <small class="btn-subtext">Grab ready-made parts</small>
+                                <small class="btn-subtext">Learn to build from scratch</small>
                             </div>
                         </a>
                         <a href="editor.html" class="btn btn-secondary btn-large btn-with-subtext">
