--- a/components.html
+++ b/components.html
@@ -44,8 +44,8 @@
         </div>
 
         <!-- Website Selection Modal -->
-        <div id="website-selector-modal" class="modal">
-            <div class="modal-overlay"></div>
+        <div id="website-selector-modal" class="website-selector-modal">
+            <div class="website-selector-overlay"></div>
             <div class="modal-content website-selector-content">
                 <h2>What website are you making?</h2>
                 <p class="modal-subtitle">We'll suggest the best components for your project!</p>
