added change website type button

--- a/components.html
+++ b/components.html
@@ -121,6 +121,17 @@
                     </div>
 
                     <div class="filters-toolbar">
+                        <!-- Website Type Selector Button (Always Visible) -->
+                        <div class="filter-group">
+                            <label class="filter-label">Website Type</label>
+                            <div class="filter-buttons">
+                                <button class="filter-btn website-type-selector-btn" id="website-type-selector-btn">
+                                    <i data-lucide="layout-template"></i>
+                                    <span id="current-website-type-text">Select Website Type</span>
+                                </button>
+                            </div>
+                        </div>
+
                         <!-- Recommended Filter (shows only when website is selected) -->
                         <div class="filter-group" id="recommended-filter-group" style="display: none;">
                             <label class="filter-label">For Your Project</label>
