--- a/components.html
+++ b/components.html
@@ -215,6 +215,9 @@
         <script src="js/services/storage.js"></script>
         <script src="js/services/forge-master.js"></script>
         <script src="js/services/website-selector.js"></script>
+        <!-- Component system dependencies - load in order -->
+        <script src="js/services/component-data.js"></script>
+        <script src="js/services/component-previews.js"></script>
         <script src="js/services/component.js"></script>
         <script>
             // Initialize page functionality
