--- a/editor.html
+++ b/editor.html
@@ -481,6 +481,9 @@
     <script src="js/services/accessibility.js"></script>
     <script src="js/services/collaboration.js"></script>
     <script src="js/services/forge-master.js"></script>
+    <!-- Component system dependencies - load in order -->
+    <script src="js/services/component-data.js"></script>
+    <script src="js/services/component-previews.js"></script>
     <script src="js/services/component.js"></script>
     <script src="js/services/code-validator.js"></script>
     <script src="js/workshop-manager.js"></script>
