--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             </div>
                             <div class="feature-content">
                                 <h3>Learn by Building</h3>
-                                <p>Follow step-by-step tutorials to build real website components. No theory overload—just hands-on practice with immediate results.</p>
+                                <p>Step-by-step tutorials. Real components. Immediate results.</p>
                             </div>
                         </div>
 
@@ -112,7 +112,7 @@
                             </div>
                             <div class="feature-content">
                                 <h3>Live Preview</h3>
-                                <p>See your code come to life instantly. Every change you make appears in real-time, so you understand exactly how HTML, CSS, and JavaScript work together.</p>
+                                <p>See your code come to life instantly as you type.</p>
                             </div>
                         </div>
 
@@ -122,7 +122,7 @@
                             </div>
                             <div class="feature-content">
                                 <h3>Professional Editor</h3>
-                                <p>Code like a pro with VS Code's Monaco editor. Get syntax highlighting, auto-completion, and helpful suggestions as you learn.</p>
+                                <p>VS Code's Monaco editor with auto-complete and syntax highlighting.</p>
                             </div>
                         </div>
 
@@ -132,7 +132,7 @@
                             </div>
                             <div class="feature-content">
                                 <h3>No Setup Required</h3>
-                                <p>Start coding immediately in your browser. No downloads, no installations, no configuration. Just open and start learning.</p>
+                                <p>Start coding in seconds. No downloads or installations.</p>
                             </div>
                         </div>
 
@@ -142,7 +142,7 @@
                             </div>
                             <div class="feature-content">
                                 <h3>Real-World Components</h3>
-                                <p>Build the same components used on professional websites—navigation bars, cards, forms, and more. Learn skills you'll actually use.</p>
+                                <p>Build navbars, cards, and forms used on professional websites.</p>
                             </div>
                         </div>
 
@@ -152,7 +152,94 @@
                             </div>
                             <div class="feature-content">
                                 <h3>Export Your Work</h3>
-                                <p>Download your projects as ready-to-use files. Take what you've built and use it in your own websites or portfolio.</p>
+                                <p>Download and use your projects anywhere you want.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Components Showcase Section -->
+            <section class="components-showcase">
+                <div class="container">
+                    <div class="section-header">
+                        <h2>Learn to Build These Components</h2>
+                        <p class="section-subtitle">Master the building blocks of modern websites</p>
+                    </div>
+                    
+                    <div class="showcase-grid">
+                        <div class="showcase-card">
+                            <div class="showcase-preview">
+                                <div class="preview-navbar">
+                                    <div class="preview-nav-brand"></div>
+                                    <div class="preview-nav-links">
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="showcase-content">
+                                <h3>Navigation Bar</h3>
+                                <p>Learn to build responsive navigation with HTML and CSS. Master flexbox, mobile menus, and accessibility.</p>
+                                <div class="showcase-tags">
+                                    <span class="tag">HTML</span>
+                                    <span class="tag">CSS</span>
+                                    <span class="tag">Responsive</span>
+                                </div>
+                                <a href="components.html?filter=navigation" class="showcase-btn">
+                                    <span>Start Tutorial</span>
+                                    <i data-lucide="arrow-right"></i>
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="showcase-card">
+                            <div class="showcase-preview">
+                                <div class="preview-card">
+                                    <div class="preview-card-image"></div>
+                                    <div class="preview-card-content">
+                                        <div class="preview-card-title"></div>
+                                        <div class="preview-card-text"></div>
+                                        <div class="preview-card-text short"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="showcase-content">
+                                <h3>Card Component</h3>
+                                <p>Create beautiful, reusable card layouts. Learn CSS Grid, shadows, hover effects, and modern design patterns.</p>
+                                <div class="showcase-tags">
+                                    <span class="tag">HTML</span>
+                                    <span class="tag">CSS</span>
+                                    <span class="tag">Design</span>
+                                </div>
+                                <a href="components.html?filter=ui-elements" class="showcase-btn">
+                                    <span>Start Tutorial</span>
+                                    <i data-lucide="arrow-right"></i>
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="showcase-card">
+                            <div class="showcase-preview">
+                                <div class="preview-form">
+                                    <div class="preview-input"></div>
+                                    <div class="preview-input"></div>
+                                    <div class="preview-button"></div>
+                                </div>
+                            </div>
+                            <div class="showcase-content">
+                                <h3>Contact Form</h3>
+                                <p>Build forms with validation and styling. Learn form elements, user input handling, and JavaScript validation.</p>
+                                <div class="showcase-tags">
+                                    <span class="tag">HTML</span>
+                                    <span class="tag">CSS</span>
+                                    <span class="tag">JavaScript</span>
+                                </div>
+                                <a href="components.html?filter=forms" class="showcase-btn">
+                                    <span>Start Tutorial</span>
+                                    <i data-lucide="arrow-right"></i>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -160,7 +247,7 @@
                     <div class="section-cta">
                         <a href="components.html" class="btn btn-primary btn-large">
                             <i data-lucide="hammer"></i>
-                            <span>Start Building Components</span>
+                            <span>View All Component Tutorials</span>
                         </a>
                     </div>
                 </div>
