--- a/components.html
+++ b/components.html
@@ -180,6 +180,10 @@
                         <div class="filter-group">
                             <label class="filter-label">Features</label>
                             <div class="filter-buttons">
+                                <button class="filter-btn" data-recommended="true" id="recommended-filter-btn" style="display: none;">
+                                    <i data-lucide="star"></i>
+                                    <span>Recommended Only</span>
+                                </button>
                                 <button class="filter-btn" data-layout="true">Layout</button>
                                 <button class="filter-btn" data-interactive="true">Interactive (JS)</button>
                                 <button class="filter-btn" data-beginner="true">Beginner Friendly</button>
