--- a/editor.html
+++ b/editor.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/editor.css">
     <link rel="stylesheet" href="styles/workshop.css">
+    <link rel="stylesheet" href="styles/workshop-enhanced.css">
     <link rel="stylesheet" href="styles/editor-header.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.45.0/min/vs/editor/editor.main.min.css">
     <style>
