--- a/components.html
+++ b/components.html
@@ -214,6 +214,9 @@
         <script src="js/services/forge-master.js"></script>
         <script src="js/services/website-selector.js"></script>
         <!-- Component system dependencies - load in order -->
+        <script src="js/services/component-data-beginner.js"></script>
+        <script src="js/services/component-data-intermediate.js"></script>
+        <script src="js/services/component-data-advanced.js"></script>
         <script src="js/services/component-data.js"></script>
         <script src="js/services/component-previews.js"></script>
         <script src="js/services/component.js"></script>
