--- a/editor.html
+++ b/editor.html
@@ -483,6 +483,9 @@
     <script src="js/services/collaboration.js"></script>
     <script src="js/services/forge-master.js"></script>
     <!-- Component system dependencies - load in order -->
+    <script src="js/services/component-data-beginner.js"></script>
+    <script src="js/services/component-data-intermediate.js"></script>
+    <script src="js/services/component-data-advanced.js"></script>
     <script src="js/services/component-data.js"></script>
     <script src="js/services/component-previews.js"></script>
     <script src="js/services/component.js"></script>
