--- a/editor.html
+++ b/editor.html
@@ -491,9 +491,11 @@
     <script src="js/services/component.js"></script>
     <script src="js/services/code-validator.js"></script>
     <script src="js/workshop-manager.js"></script>
+    <script src="js/services/workshop-error-checker.js"></script>
     <script src="js/html-autocomplete.js"></script>
     <script src="js/editor-init.js"></script>
-    <script src="js/app.js"></script>
+<script src="js/app.js"></script>
+
     <script>
         // Initialize page after everything loads
         document.addEventListener('DOMContentLoaded', function() {
