--- a/editor.html
+++ b/editor.html
@@ -482,6 +482,7 @@
     <script src="js/services/accessibility.js"></script>
     <script src="js/services/collaboration.js"></script>
     <script src="js/services/forge-master.js"></script>
+    <script src="js/services/analytics.js"></script>
     <!-- Component system dependencies - load in order -->
     <script src="js/services/component-data-beginner.js"></script>
     <script src="js/services/component-data-intermediate.js"></script>
